# pyinjector

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
pynjector/: injector.py
src/: __init__.py  injector.py
test/: test_injector.py
test/assets/: Pipfile  pyproject.toml  pyproject_from_pipfile.toml  pyproject_mod.toml
test/integration/: test_injector.py
test/unit/: test_injector.py
