[build-system]
requires = [ "flit",]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "src"
author = "Jonatan Poveda"
author-email = "jonatan@adsmurai.com"
home-page = "https://github.com/jonpoveda/pynjector"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",]
requires = [ "argparse (==1.4.0)", "toml (==0.9.4)",]
dev-requires = [ "aspy.yaml (==1.1.1)", "astroid (==1.6.3)", "cached-property (==1.4.2)", "cfgv (==1.0.0)", "identify (==1.0.16)", "isort (==4.3.4)", "lazy-object-proxy (==1.3.1)", "mccabe (==0.6.1)", "nodeenv (==1.3.0)", "pre-commit (==1.8.2)", "pylint (==1.8.4)", "pyyaml (==3.12)", "six (==1.11.0)", "virtualenv (==15.2.0)", "wrapt (==1.10.11)",]
description-file = "README.md"
requires-python = ">=3.6"
dist-name = "pynjector"
keywords = "python, pipenv, flit, dependency-injector"
